--- a/src/app/pages/norms/sub-articles/sub-articles.component.html
+++ b/src/app/pages/norms/sub-articles/sub-articles.component.html
@@ -120,7 +120,7 @@
                                                 </span>
                                                 
                                                 <span style="margin-left:10px;" class="btn btn-danger" 
-                                                [style.cursor]="'pointer'">
+                                                [style.cursor]="'pointer'" (click)="deleteArticle(i)">
                                                 <i class="ri-delete-bin-5-line"></i>
                                                 </span>
                                                 
