--- a/src/app/pages/norms/sub-articles/sub-articles.component.html
+++ b/src/app/pages/norms/sub-articles/sub-articles.component.html
@@ -40,17 +40,19 @@
         </div>
 
         <div style="min-height: 350px !important;" *ngIf="articulo.articulos.length > 0">
-                                
+            
+            <form [formGroup]="busquedaForm">
             <div class="d-md-flex justify-content-sm-end gap-2">
                 <div class="search-box" style="width: 20%;">
-                    <input type="text" class="form-control bg-light border-light" placeholder="Buscar..." formControlName="busqueda" value="" [(ngModel)]="search" (keyup.enter)="busquedaNorma()">
+                    <input type="text" class="form-control bg-light border-light" placeholder="Buscar..." formControlName="busqueda" value="" [(ngModel)]="search">
                     <i class="ri-search-2-line search-icon"></i>
                 </div>
             </div>
+            </form>
 
             <div style="padding: 0px;">
 
-                <ng-container *ngFor="let ar of articulo.articulos; let i = index;">
+                <ng-container *ngFor="let ar of articulo.articulos | filter:search; let i = index;">
                 
                 <div class="list-group" *ngIf="!ar.eliminado">
 
