ajustes reu 15 mayo

--- a/src/app/pages/norms/sub-articles/sub-articles.component.html
+++ b/src/app/pages/norms/sub-articles/sub-articles.component.html
@@ -19,8 +19,8 @@
 
       <div class="row g-4 mb-4">
         <div class="col-sm">
-            <h5 class="mb-1">Crear Sub Artículos</h5>
-            <p class="text-muted">Crea cada una de las sub artículos de la Obligación seleccionada</p>
+            <h5 class="mb-1">Configurar Sub Artículos</h5>
+            <p class="text-muted">Configura cada una de las sub artículos de la Obligación seleccionada</p>
         </div>
         <div class="col-sm-auto">
                 <button type="button" class="btn btn-info btn-label waves-effect right waves-light" (click)="showAddSubArticle()">Agregar Sub Artículo<i class="ri-add-line label-icon align-middle fs-16"></i></button>
@@ -63,8 +63,7 @@
                                         
                                     </div>
                                     <div class="card-header">
-                                        <h4 class="card-title mb-0">{{ar.encabezado}}</h4>
-                                        <h5 class="text-muted">{{ar.titulo}}</h5>
+                                        <h4 class="card-title mb-0">{{ar.titulo}}</h4>
                                         <p>{{ar.contenido}}</p>
                                     </div>
                                     <div class="card-body p-4">                
