--- a/src/app/pages/norms/norms.component.html
+++ b/src/app/pages/norms/norms.component.html
@@ -84,6 +84,34 @@
                             </div>
                           </div>
                           
+                          <div class="col-lg-6">
+                            <div class="mb-3">
+                                <label for="customername-field" class="form-label">Fecha Publicación</label>
+                                <div class="form-icon right">
+                                    <input [ngClass]="{ 'is-invalid': submitted && f['fechaPublicacion'].errors }" class="form-control form-control-icon flatpickr-input" id="publicacion-input" type="text" formControlName="fechaPublicacion" mwlFlatpickr [altInput]="true" [convertModelValue]="true">
+                                    <i class="ri-calendar-todo-fill"></i>
+                                    
+                                    <div *ngIf="submitted && f['fechaPublicacion'].errors" class="invalid-feedback" align="left">
+                                        <div *ngIf="f['fechaPublicacion'].errors['required']">La fecha de publicación es requerida</div>
+                                    </div>
+                                </div>
+                            </div>
+                          </div>
+                          
+                          <div class="col-lg-6">
+                            <div class="mb-3">
+                                <label for="customername-field" class="form-label">Fecha Promulgación</label>
+                                <div class="form-icon right">
+                                    <input [ngClass]="{ 'is-invalid': submitted && f['fechaPromulgacion'].errors }" class="form-control form-control-icon flatpickr-input" id="promulgacion-input" type="text" formControlName="fechaPromulgacion" mwlFlatpickr [altInput]="true" [convertModelValue]="true">
+                                    <i class="ri-calendar-todo-fill"></i>
+                                    
+                                    <div *ngIf="submitted && f['fechaPromulgacion'].errors" class="invalid-feedback" align="left">
+                                        <div *ngIf="f['fechaPromulgacion'].errors['required']">La fecha de promulgacion es requerida</div>
+                                    </div>
+                                </div>
+                            </div>
+                          </div>
+                          
                           <div class="col-lg-12">
                               <div class="mb-3">
                                 <label class="form-label" for="gen-info-ambito-input">Ámbito</label>
@@ -106,7 +134,7 @@
                     <!--</form>-->
                     <!-- wizard-tab -->
                     <div class="d-flex align-items-start gap-3 mt-4">
-                      <button type="button" class="btn btn-success btn-label right ms-auto nexttab nexttab" (click)="saveCuerpoLegal()" data-nexttab="pills-info-desc-tab" awNextStep [disabled]="!cuerpoForm.valid"><i class="ri-arrow-right-line label-icon align-middle fs-16 ms-2"></i>Crear Artículos</button>
+                      <button type="button" class="btn btn-success btn-label right ms-auto nexttab nexttab" (click)="saveCuerpoLegal()" data-nexttab="pills-info-desc-tab" awNextStep [disabled]="!cuerpoForm.valid"><i class="ri-arrow-right-line label-icon align-middle fs-16 ms-2"></i>Configurar</button>
                     </div>
                 </aw-wizard-step>
   
@@ -120,8 +148,8 @@
                     <ng-container *ngIf="!addArticle && !addSubArticle && !editArticle">
                       <div class="row g-4 mb-4">
                         <div class="col-sm">
-                            <h5 class="mb-1">Crear Artículos</h5>
-                            <p class="text-muted">Crea cada uno de los artículos de su Cuerpo legal</p>
+                            <h5 class="mb-1">Configurar</h5>
+                            <p class="text-muted">Configura cada uno de los artículos de su Cuerpo legal</p>
                         </div>
                         <div class="col-sm-auto">
                                 <button type="button" class="btn btn-info btn-label waves-effect right waves-light" (click)="showAddArticle()">Agregar<i class="ri-add-line label-icon align-middle fs-16"></i></button>
