--- a/src/app/pages/norms/articles/articles.component.html
+++ b/src/app/pages/norms/articles/articles.component.html
@@ -20,8 +20,10 @@
         <div class="col-lg-12">
             <div class="mb-3">
                 <label class="form-label" for="gen-info-username-input">Contenido</label>
-                <textarea class="form-control" formControlName="contenido" id="description" rows="3" placeholder="Ingrese contenido" required [ngClass]="{ 'is-invalid': submitted && f['contenido'].errors }">Cumplimiento ley 2045 .... </textarea>
+                <!--<textarea class="form-control" formControlName="contenido" id="description" rows="3" placeholder="Ingrese contenido" required [ngClass]="{ 'is-invalid': submitted && f['contenido'].errors }">Cumplimiento ley 2045 .... </textarea>-->
                 
+                <ckeditor [editor]="Editor" data="" formControlName="contenido" id="description"></ckeditor>
+
                 <div *ngIf="submitted && f['contenido'].errors" class="invalid-feedback" align="left">
                     <div *ngIf="f['contenido'].errors['required']">El contenido es requerido</div>
                 </div>
