agregar modal de tipo de documento legal

--- a/src/app/pages/norms/norms.component.html
+++ b/src/app/pages/norms/norms.component.html
@@ -38,7 +38,9 @@
                           </div>
                       </div>
                       <div class="row">
-                        
+
+                        <input type="hidden" name="tipo" value="" formControlName="tipo" />
+
                         <div class="col-lg-12">
                             <div class="mb-3">
                                 <label class="form-label" for="gen-info-norma-input">Id Norma</label>
